[package]
name = "cerbero"
description = "Kerberos protocol attacker"
version = "0.0.18"
authors = ["Eloy <zer1t0ps@protonmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://gitlab.com/Zer1t0/cerbero"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
kerbeiros = "0.2"
kerberos_asn1 = "0.2"
kerberos_constants = "0.0"
kerberos_crypto = "0.3"
kerberos_ccache = "0.0"

ms_pac = "0.0"
ms_dtyp = "0.0"
ms_samr = "0.0"


chrono = "0.4"
rand = "0.6"
trust-dns-resolver = "0.20"
log = "0.4"
stderrlog = "0.4"
